# ardrone

./: CMakeLists.txt  README.md  manifest.xml  package.xml
launch/: control_con_tags.launch  joystick_control.launch  teclado_control.launch
src/: drone_control.py  drone_estado.py  drone_video.py  joystick_control.py  teclado_control.py
